# mini-ecu-sim

./: CHANGELOG.md  Cargo.toml  README.md
src/: error_log.rs  main.rs  sensor.rs  state.rs  watchdog.rs
src/tests/: integration_test.rs
