[package]
name = "mini-ecu-sim"
version = "0.2.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
embedded-hal-mock = "0.11.1"
